--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev-start": "nodemon"
+    "dev-start": "nodemon",
+    "bundle": "webpack --progress --colors --watch"
   },
   "author": "cheshrieoctopus",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.3.13",
+    "babel-loader": "^6.2.0",
     "backbone": "^1.2.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "jquery": "^2.1.4",
     "react": "^0.14.3",
     "request": "^2.67.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
     "dotenv": "^1.2.0",
