--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "backbone": "^1.2.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "react": "^0.14.3",
     "request": "^2.67.0",
