--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   "author": "cheshrieoctopus",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.3.13",
+    "babel-core": "^6.3.15",
+    "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
+    "babel-plugin-transform-react-jsx": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "backbone": "^1.2.3",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "request": "^2.67.0",
     "underscore": "^1.8.3",
     "webpack": "^1.12.9"
   },
   "devDependencies": {
     "dotenv": "^1.2.0",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.11.3",
     "nodemon": "^1.8.1"
   }
 }
