--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "fewd_class_mgmt",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tool for managing your FEWD course.",
+  "repository" :{
+    "type" : "git",
+    "url" : "https://github.com/cheshireoctopus/fewd_mgmt.git"
+  },
   "main": "server.js",
   "scripts": {
     "dev-start": "nodemon",
@@ -19,6 +23,7 @@
     "babel-preset-react": "^6.3.13",
     "backbone": "^1.2.3",
     "body-parser": "^1.14.1",
+    "css-loader": "^0.23.0",
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
     "jade": "^1.11.0",
@@ -26,6 +31,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "request": "^2.67.0",
+    "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
     "webpack": "^1.12.9"
   },
