--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "fewd_class_mgmt",
   "version": "1.0.0",
   "description": "Tool for managing your FEWD course.",
-  "repository" :{
-    "type" : "git",
-    "url" : "https://github.com/cheshireoctopus/fewd_mgmt.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cheshireoctopus/fewd_mgmt.git"
   },
   "main": "server.js",
   "scripts": {
-    "dev-start": "nodemon",
+    "dev": "nodemon",
     "bundle": "webpack --progress --colors --watch"
   },
   "author": "cheshrieoctopus",
@@ -26,6 +26,7 @@
     "css-loader": "^0.23.0",
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
+    "file-loader": "^0.8.5",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "react": "^0.14.3",
@@ -33,6 +34,7 @@
     "request": "^2.67.0",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9"
   },
   "devDependencies": {
