--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.3.13",
     "backbone": "^1.2.3",
     "body-parser": "^1.14.1",
+    "bootstrap": "^3.3.6",
     "css-loader": "^0.23.0",
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
