new routes; landing component; github auth; autocomplete

--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "backbone": "^1.2.3",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.6",
+    "cors": "^2.7.1",
     "css-loader": "^0.23.0",
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
     "file-loader": "^0.8.5",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
+    "mongoose": "^4.3.3",
+    "passport": "^0.3.2",
+    "passport-github": "^1.0.0",
+    "querystring": "^0.2.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "request": "^2.67.0",
