--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "cheshrieoctopus",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.3.26",
     "babel-core": "^6.3.15",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
