--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "expose-loader": "^0.7.1",
     "express": "^4.13.3",
     "file-loader": "^0.8.5",
+    "firebase": "^2.4.1",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "mongoose": "^4.3.3",
     "passport": "^0.3.2",
     "passport-github": "^1.0.0",
     "querystring": "^0.2.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "request": "^2.67.0",
     "style-loader": "^0.13.0",
     "underscore": "^1.8.3",
