--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "cheshrieoctopus",
   "license": "ISC",
   "dependencies": {
+    "assert": "^1.3.0",
     "babel": "^6.3.26",
     "babel-core": "^6.3.15",
     "babel-eslint": "^4.1.6",
@@ -31,6 +32,7 @@
     "express": "^4.13.3",
     "file-loader": "^0.8.5",
     "firebase": "^2.4.1",
+    "immutable": "^3.8.1",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
     "mongoose": "^4.3.3",
