--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "assert": "^1.3.0",
     "babel": "^6.3.26",
-    "babel-core": "^6.3.15",
+    "babel-core": "^6.9.0",
     "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.0",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-react-jsx": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-runtime": "^6.9.0",
     "backbone": "^1.2.3",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.6",
