--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: pip install -r requirements.txt
 # command to run tests
-script: sh run_travis_test.sh
+script: nosetests # sh run_travis_test.sh
