--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ python:
 install: pip install -r requirements.txt
 # command to run tests
 script: sh run_travis_test.sh
-after_success: coveralls
+after_success:
+ - coveralls
+ - bash <(curl -s https://codecov.io/bash)
