--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install: pip install -r requirements.txt
 # command to run tests
 script: sh run_travis_test.sh
-after_success:
+after_script:
  - coveralls
  - bash <(curl -s https://codecov.io/bash)
 notifications:
