--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ python:
  - "2.7"
 # command to install dependencies
 install: pip install -r requirements.txt
+services:
+ - postgresql
+before_script:
+ - EXPORT SQLALCHEMY_DATABASE_URI=postgresql://postgres@localhost/course_mgmt
+ - psql -c 'create database travis_ci_test;' -U postgres
 # command to run tests
 script: sh run_travis_test.sh
 after_script:
