--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install: pip install -r requirements.txt
 services:
  - postgresql
 before_script:
- - ezport SQLALCHEMY_DATABASE_URI=postgresql://postgres@localhost/course_mgmt
+ - export SQLALCHEMY_DATABASE_URI=postgresql://postgres@localhost/course_mgmt
  - psql -c 'create database travis_ci_test;' -U postgres
 # command to run tests
 script: sh run_travis_test.sh
