--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 before_script:
  - export SQLALCHEMY_DATABASE_URI=postgresql://postgres@localhost/course_mgmt
  - psql -c 'create database course_mgmt;' -U postgres
+ - python manage.py db migrate
 # command to run tests
 script: sh run_travis_test.sh
 after_script:
